# actix-crud-app

./: Cargo.toml
src/: handler.rs  main.rs  model.rs
