[package]
name = "actix-001"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
